--- a/presnapdefender.ipynb
+++ b/presnapdefender.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,14 +590,18 @@
     "    game = offensive_players.iloc[i]['gameId']\n",
     "    play = offensive_players.iloc[i]['playId']\n",
     "    potentialDefenders = defensive_players[(defensive_players['gameId'] == game) & (defensive_players['playId'] == play)]\n",
+    "    closest = 99999999\n",
+    "    closestid = 0\n",
     "    for j in range(len(potentialDefenders)):\n",
-    "        if abs(offensive_players.iloc[i]['y'] - potentialDefenders.iloc[j]['y']) < 1:\n",
-    "            offensive_players.loc[offensive_players.index[i], 'defender'] = potentialDefenders.iloc[j]['nflId']"
+    "        if abs(offensive_players.iloc[i]['y'] - potentialDefenders.iloc[j]['y']) < closest:\n",
+    "            closest = abs(offensive_players.iloc[i]['y'] - potentialDefenders.iloc[j]['y'])\n",
+    "            closestid = potentialDefenders.iloc[j]['nflId']\n",
+    "    offensive_players.loc[offensive_players.index[i], 'defender'] = closestid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +653,7 @@
        "      <td>31.89</td>\n",
        "      <td>23.92</td>\n",
        "      <td>RB</td>\n",
-       "      <td>None</td>\n",
+       "      <td>52706.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -659,7 +663,7 @@
        "      <td>34.72</td>\n",
        "      <td>26.46</td>\n",
        "      <td>TE</td>\n",
-       "      <td>47854.0</td>\n",
+       "      <td>42929.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -709,7 +713,7 @@
        "      <td>27.36</td>\n",
        "      <td>37.08</td>\n",
        "      <td>TE</td>\n",
-       "      <td>None</td>\n",
+       "      <td>47964.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26813</th>\n",
@@ -719,7 +723,7 @@
        "      <td>28.20</td>\n",
        "      <td>17.94</td>\n",
        "      <td>WR</td>\n",
-       "      <td>None</td>\n",
+       "      <td>46223.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26815</th>\n",
@@ -729,7 +733,7 @@
        "      <td>31.67</td>\n",
        "      <td>31.85</td>\n",
        "      <td>RB</td>\n",
-       "      <td>None</td>\n",
+       "      <td>53459.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26820</th>\n",
@@ -749,21 +753,21 @@
       "text/plain": [
        "           gameId  playId    nflId      x      y position defender\n",
        "3      2022091200      64  42412.0  39.06  14.49       WR  42393.0\n",
-       "8      2022091200      64  46096.0  31.89  23.92       RB     None\n",
-       "9      2022091200      64  46189.0  34.72  26.46       TE  47854.0\n",
+       "8      2022091200      64  46096.0  31.89  23.92       RB  52706.0\n",
+       "9      2022091200      64  46189.0  34.72  26.46       TE  42929.0\n",
        "10     2022091200      64  47803.0  37.59  28.49       TE  35459.0\n",
        "11     2022091200      64  47847.0  38.53  33.35       WR  53438.0\n",
        "...           ...     ...      ...    ...    ...      ...      ...\n",
        "26811  2022090800    3696  41290.0  27.14   8.13       WR  54650.0\n",
-       "26812  2022090800    3696  43399.0  27.36  37.08       TE     None\n",
-       "26813  2022090800    3696  44881.0  28.20  17.94       WR     None\n",
-       "26815  2022090800    3696  47853.0  31.67  31.85       RB     None\n",
+       "26812  2022090800    3696  43399.0  27.36  37.08       TE  47964.0\n",
+       "26813  2022090800    3696  44881.0  28.20  17.94       WR  46223.0\n",
+       "26815  2022090800    3696  47853.0  31.67  31.85       RB  53459.0\n",
        "26820  2022090800    3696  53678.0  28.46  43.94       WR  54488.0\n",
        "\n",
        "[9437 rows x 7 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,184 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gameId</th>\n",
-       "      <th>playId</th>\n",
-       "      <th>nflId</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>position</th>\n",
-       "      <th>defender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>64</td>\n",
-       "      <td>46096.0</td>\n",
-       "      <td>31.89</td>\n",
-       "      <td>23.92</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>85</td>\n",
-       "      <td>42412.0</td>\n",
-       "      <td>38.24</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>85</td>\n",
-       "      <td>47847.0</td>\n",
-       "      <td>38.68</td>\n",
-       "      <td>14.40</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>109</td>\n",
-       "      <td>42412.0</td>\n",
-       "      <td>44.59</td>\n",
-       "      <td>35.77</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>109</td>\n",
-       "      <td>47803.0</td>\n",
-       "      <td>45.46</td>\n",
-       "      <td>44.69</td>\n",
-       "      <td>TE</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26792</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>3636</td>\n",
-       "      <td>47853.0</td>\n",
-       "      <td>34.89</td>\n",
-       "      <td>23.51</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26803</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>3674</td>\n",
-       "      <td>47853.0</td>\n",
-       "      <td>31.76</td>\n",
-       "      <td>27.43</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26812</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>3696</td>\n",
-       "      <td>43399.0</td>\n",
-       "      <td>27.36</td>\n",
-       "      <td>37.08</td>\n",
-       "      <td>TE</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26813</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>3696</td>\n",
-       "      <td>44881.0</td>\n",
-       "      <td>28.20</td>\n",
-       "      <td>17.94</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26815</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>3696</td>\n",
-       "      <td>47853.0</td>\n",
-       "      <td>31.67</td>\n",
-       "      <td>31.85</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3502 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           gameId  playId    nflId      x      y position defender\n",
-       "8      2022091200      64  46096.0  31.89  23.92       RB     None\n",
-       "20     2022091200      85  42412.0  38.24  37.85       WR     None\n",
-       "27     2022091200      85  47847.0  38.68  14.40       WR     None\n",
-       "35     2022091200     109  42412.0  44.59  35.77       WR     None\n",
-       "39     2022091200     109  47803.0  45.46  44.69       TE     None\n",
-       "...           ...     ...      ...    ...    ...      ...      ...\n",
-       "26792  2022090800    3636  47853.0  34.89  23.51       RB     None\n",
-       "26803  2022090800    3674  47853.0  31.76  27.43       RB     None\n",
-       "26812  2022090800    3696  43399.0  27.36  37.08       TE     None\n",
-       "26813  2022090800    3696  44881.0  28.20  17.94       WR     None\n",
-       "26815  2022090800    3696  47853.0  31.67  31.85       RB     None\n",
-       "\n",
-       "[3502 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "offensive_players[offensive_players['defender'].isna()]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +896,7 @@
        "[16124 rows x 3 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1073,7 @@
        "      <td>75.90</td>\n",
        "      <td>21.79</td>\n",
        "      <td>RB</td>\n",
-       "      <td>None</td>\n",
+       "      <td>46085.0</td>\n",
        "      <td>Man</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1276,208 +1103,19 @@
        "9351  2022090800    3190  41290.0  71.53   7.35       WR  52647.0         Man\n",
        "9352  2022090800    3190  43399.0  72.77  30.59       TE  40166.0         Man\n",
        "9353  2022090800    3190  44881.0  72.39  16.98       WR  46190.0         Man\n",
-       "9354  2022090800    3190  47853.0  75.90  21.79       RB     None         Man\n",
+       "9354  2022090800    3190  47853.0  75.90  21.79       RB  46085.0         Man\n",
        "9355  2022090800    3190  53678.0  71.78  33.64       WR  54488.0         Man\n",
        "\n",
        "[2062 rows x 8 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "offensive_players"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gameId</th>\n",
-       "      <th>playId</th>\n",
-       "      <th>nflId</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>position</th>\n",
-       "      <th>defender</th>\n",
-       "      <th>pff_manZone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>1344</td>\n",
-       "      <td>52423.0</td>\n",
-       "      <td>41.45</td>\n",
-       "      <td>35.95</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>1344</td>\n",
-       "      <td>53464.0</td>\n",
-       "      <td>41.18</td>\n",
-       "      <td>7.32</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>306</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>2292</td>\n",
-       "      <td>42358.0</td>\n",
-       "      <td>104.59</td>\n",
-       "      <td>32.13</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>2292</td>\n",
-       "      <td>42721.0</td>\n",
-       "      <td>108.65</td>\n",
-       "      <td>33.20</td>\n",
-       "      <td>TE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>316</th>\n",
-       "      <td>2022091200</td>\n",
-       "      <td>2391</td>\n",
-       "      <td>42412.0</td>\n",
-       "      <td>100.30</td>\n",
-       "      <td>32.88</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9182</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>2137</td>\n",
-       "      <td>42489.0</td>\n",
-       "      <td>54.26</td>\n",
-       "      <td>35.36</td>\n",
-       "      <td>WR</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9185</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>2137</td>\n",
-       "      <td>47879.0</td>\n",
-       "      <td>54.43</td>\n",
-       "      <td>18.28</td>\n",
-       "      <td>TE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9302</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>2884</td>\n",
-       "      <td>43399.0</td>\n",
-       "      <td>73.81</td>\n",
-       "      <td>20.16</td>\n",
-       "      <td>TE</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9304</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>2884</td>\n",
-       "      <td>52460.0</td>\n",
-       "      <td>72.27</td>\n",
-       "      <td>45.52</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9354</th>\n",
-       "      <td>2022090800</td>\n",
-       "      <td>3190</td>\n",
-       "      <td>47853.0</td>\n",
-       "      <td>75.90</td>\n",
-       "      <td>21.79</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Man</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>594 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          gameId  playId    nflId       x      y position defender pff_manZone\n",
-       "185   2022091200    1344  52423.0   41.45  35.95       WR     None         Man\n",
-       "188   2022091200    1344  53464.0   41.18   7.32       RB     None         Man\n",
-       "306   2022091200    2292  42358.0  104.59  32.13       RB     None         Man\n",
-       "307   2022091200    2292  42721.0  108.65  33.20       TE     None         Man\n",
-       "316   2022091200    2391  42412.0  100.30  32.88       WR     None         Man\n",
-       "...          ...     ...      ...     ...    ...      ...      ...         ...\n",
-       "9182  2022090800    2137  42489.0   54.26  35.36       WR     None         Man\n",
-       "9185  2022090800    2137  47879.0   54.43  18.28       TE     None         Man\n",
-       "9302  2022090800    2884  43399.0   73.81  20.16       TE     None         Man\n",
-       "9304  2022090800    2884  52460.0   72.27  45.52       RB     None         Man\n",
-       "9354  2022090800    3190  47853.0   75.90  21.79       RB     None         Man\n",
-       "\n",
-       "[594 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "offensive_players[offensive_players['defender'].isna()]"
    ]
   }
  ],
