--- a/voronoi.ipynb
+++ b/voronoi.ipynb
@@ -1024,7 +1024,6 @@
     "vor = Voronoi(all_points)\n",
     "boundary_polygon = Polygon([(x_min, y_min), (x_min, y_max), (x_max, y_max), (x_max, y_min)])\n",
     "\n",
-    "# Clip Voronoi cells\n",
     "clipped_polygons = []\n",
     "polygon_areas = []\n",
     "for region in vor.regions:\n",
@@ -1057,34 +1056,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area = 96.04, nflId = 42347.0, Position = WR\n",
-      "Area = 37.64, nflId = 44841.0, Position = TE\n",
-      "Area = 103.56, nflId = 52595.0, Position = WR\n",
-      "Area = 77.13, nflId = 44898.0, Position = RB\n",
-      "Area = 71.87, nflId = 54564.0, Position = WR\n"
+      "Polygon area: 96.04, nflId: 42347.0, position: WR\n",
+      "Polygon area: 37.64, nflId: 44841.0, position: TE\n",
+      "Polygon area: 103.56, nflId: 52595.0, position: WR\n",
+      "Polygon area: 77.13, nflId: 44898.0, position: RB\n",
+      "Polygon area: 71.87, nflId: 54564.0, position: WR\n"
      ]
     }
    ],
    "source": [
-    "point_to_player = dict(zip([tuple(p) for p in filteredSamplePlayPoints[['x', 'y']].values], \n",
-    "                           filteredSamplePlayPoints[['nflId', 'position']].values))\n",
+    "player_info = {tuple(row[['x', 'y']].values): {'nflId': row['nflId'], 'position': row['position']} \n",
+    "               for idx, row in filteredSamplePlayPoints.iterrows()}\n",
     "\n",
-    "for i, poly in enumerate(clipped_polygons):\n",
-    "    x, y = poly.exterior.xy\n",
-    "    centroid = poly.centroid\n",
-    "    centroid_coords = (centroid.x, centroid.y)\n",
-    "    closest_point = min(all_points, key=lambda p: np.linalg.norm(np.array(p) - np.array(centroid_coords)))\n",
-    "    closest_point_tuple = tuple(closest_point)\n",
-    "    nflId, position = point_to_player.get(closest_point_tuple, (None, None))\n",
-    "    if position in ['WR','TE','RB']:\n",
-    "        print(f\"Area = {polygon_areas[i]:.2f}, nflId = {nflId}, Position = {position}\")"
+    "for poly, area in zip(clipped_polygons, polygon_areas):\n",
+    "    for point_coords, info in player_info.items():\n",
+    "        point = Point(point_coords)\n",
+    "        if poly.contains(point) and info['position'] in ['TE','RB','WR']:\n",
+    "            print(f\"Polygon area: {area:.2f}, nflId: {info['nflId']}, position: {info['position']}\")"
    ]
   }
  ],
