--- a/finalVoronoi.ipynb
+++ b/finalVoronoi.ipynb
@@ -1491,7 +1491,7 @@
     }
    ],
    "source": [
-    "sample = weekOneTracking[weekOneTracking['gameId']==2022091106]\n",
+    "sample = weekOneTracking\n",
     "cleanedSample = clean_data_voronoi(sample)\n",
     "voronoiAreas = max_voronoi_per_play(cleanedSample)\n",
     "groupedVoronoi = group_voronoi_results(voronoiAreas)"
