--- a/finalDataCleaning.ipynb
+++ b/finalDataCleaning.ipynb
@@ -552,6 +552,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekone=weekone[weekone['absoluteYardlineNumber']!=60]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 224,
    "metadata": {},
    "outputs": [],
