--- a/finalDataCleaning.ipynb
+++ b/finalDataCleaning.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,22 +432,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atsnap = df[df['frameType']==\"SNAP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
     "weekone = pd.merge(\n",
     "    weekone,\n",
-    "    df[['gameId','playId','frameId','nflId','s','a']],\n",
+    "    atsnap[['gameId','playId','nflId','s','a']],\n",
     "    how = \"left\",\n",
-    "    left_on = ['gameId','playId','frameId','routeRunnerId'],\n",
-    "    right_on = ['gameId','playId','frameId','nflId']\n",
+    "    left_on = ['gameId','playId','routeRunnerId'],\n",
+    "    right_on = ['gameId','playId','nflId']\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
