--- a/modeling2.ipynb
+++ b/modeling2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "[1135 rows x 32 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "[1050 rows x 32 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "[119 rows x 15 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1445,7 @@
        "[1046 rows x 5 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "[119 rows x 16 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -2135,7 +2135,7 @@
        "[119 rows x 16 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,33 +2146,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
-    "motion = pd.get_dummies(motion, columns=['offenseFormation','receiverAlignment','pff_passCoverage'], drop_first=True)"
+    "motion = pd.get_dummies(motion, columns=['motionReciever','offenseFormation','receiverAlignment','pff_passCoverage'], drop_first=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['gameId', 'playId', 'firstY', 'secondY', 'thirdY', 'fourthY', 'fifthY',\n",
-       "       'motionReciever', 'down', 'yardsToGo', 'absoluteYardlineNumber',\n",
+       "       'down', 'yardsToGo', 'absoluteYardlineNumber',\n",
        "       'motionReceiverMaxSeparation', 'motionReceiverTargetted',\n",
-       "       'offenseFormation_I_FORM', 'offenseFormation_PISTOL',\n",
-       "       'offenseFormation_SHOTGUN', 'offenseFormation_SINGLEBACK',\n",
-       "       'receiverAlignment_2x2', 'receiverAlignment_3x1',\n",
-       "       'receiverAlignment_3x2', 'receiverAlignment_4x1',\n",
-       "       'pff_passCoverage_Cover-0', 'pff_passCoverage_Cover-1'],\n",
+       "       'motionReciever_2', 'motionReciever_3', 'motionReciever_4',\n",
+       "       'motionReciever_5', 'offenseFormation_I_FORM',\n",
+       "       'offenseFormation_PISTOL', 'offenseFormation_SHOTGUN',\n",
+       "       'offenseFormation_SINGLEBACK', 'receiverAlignment_2x2',\n",
+       "       'receiverAlignment_3x1', 'receiverAlignment_3x2',\n",
+       "       'receiverAlignment_4x1', 'pff_passCoverage_Cover-0',\n",
+       "       'pff_passCoverage_Cover-1'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2194,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2215,26 +2217,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5417\n",
+      "Accuracy: 0.5833\n",
       "Confusion Matrix:\n",
-      "[[11  4]\n",
-      " [ 7  2]]\n",
+      "[[13  2]\n",
+      " [ 8  1]]\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.61      0.73      0.67        15\n",
-      "           1       0.33      0.22      0.27         9\n",
+      "           0       0.62      0.87      0.72        15\n",
+      "           1       0.33      0.11      0.17         9\n",
       "\n",
-      "    accuracy                           0.54        24\n",
-      "   macro avg       0.47      0.48      0.47        24\n",
-      "weighted avg       0.51      0.54      0.52        24\n",
+      "    accuracy                           0.58        24\n",
+      "   macro avg       0.48      0.49      0.44        24\n",
+      "weighted avg       0.51      0.58      0.51        24\n",
       "\n"
      ]
     }
@@ -2261,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
